Fix dropbox link offscreen

--- a/app/stylesheets/_footer.scss
+++ b/app/stylesheets/_footer.scss
@@ -3,7 +3,7 @@
   right: 0;
   bottom: 0;
   font-size: 14px;
-  width: 100%;
+
   .wrapper {
     padding: 20px;
     @include clearfix;
